alterando lógica de adicionar nivel com DTO